# hwiocpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: Toolchain-RP4.cmake
include/hwiocpp/: GenericDevice.hpp
include/hwiocpp/gpio/: 74hc4051.hpp  DeviceGPIO.hpp  KeypadMatrix.hpp  Relay.hpp
include/hwiocpp/i2c/: DeviceI2C.hpp  ads1015.hpp  ads1115.hpp  ads1x15.hpp  ads1x15_defines.hpp
include/hwiocpp/i2c/sensors/: SoilMoistureSensor.hpp  WaterLevelSensor.hpp  aht10.hpp
include/hwiocpp/utils/: matrix.hpp
scripts/: button.py  button2.py  dump_gpio.sh  shift_register.py  shift_test.py  shiftpi.py  test_aht10.py  test_gpio.py  test_gpio_pins.py  test_gpio_pulldown.py  test_gpio_pulldown_all.py  test_gpio_pullup.py  test_pin.py  test_soil.py
src/: GenericDevice.cpp  main.cpp  qt_main.cpp  qt_main.hpp
src/devices/: GenericDevice.cpp  GenericDevice.hpp
src/devices/gpio/: 74hc4051.cpp  74hc4051.hpp  DeviceGPIO.cpp  DeviceGPIO.hpp  KeypadMatrix.cpp  KeypadMatrix.hpp  Relay.cpp  Relay.hpp
src/devices/i2c/: DeviceI2C.cpp  DeviceI2C.hpp  ads1015.hpp  ads1115.hpp  ads1x15.cpp  ads1x15.hpp  ads1x15_defines.hpp  aht10.cpp  aht10.hpp
src/devices/i2c/sensors/: SoilMoistureSensor.cpp  SoilMoistureSensor.hpp  WaterLevelSensor.hpp  aht10.cpp  aht10.hpp
src/gpio/: 74hc4051.cpp  DeviceGPIO.cpp  KeypadMatrix.cpp  Relay.cpp
src/i2c/: DeviceI2C.cpp  ads1x15.cpp
src/i2c/sensors/: SoilMoistureSensor.cpp  WaterLevelSensor.cpp  aht10.cpp
src/utils/: matrix.hpp
